# cmake-tutorial-cn

./: README.md  SUMMARY.md  add-lib.md  basic.md  dashboard.md  generator.md  install-test.md  installer.md  introspection.md
example/1. A Basic Starting Point/: CMakeLists.txt  README.md
example/2. Adding a Library/: CMakeCache.txt  CMakeLists.txt  tutorial.cxx
example/2. Adding a Library/MathFunctions/: CMakeLists.txt  mysqrt.cxx
example/3. Installing and Testing/: CMakeLists.txt
example/3. Installing and Testing/MathFunctions/: mysqrt.cxx
example/4. Adding System Introspection/: CMakeLists.txt  TutorialConfig.h.in
example/5. Adding a Generated File and Generator/: CMakeLists.txt  README.md  tutorial.cxx
example/5. Adding a Generated File and Generator/MathFunctions/: CMakeLists.txt  mysqrt.cxx
example/6. Building an Installer/: CMakeLists.txt
example/6. Building an Installer/MathFunctions/: CMakeLists.txt  MakeTable.cxx  mysqrt.cxx
